large buttons on profile page

--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -14,7 +14,7 @@
         <%/owner%>
 	</span>
     <%^owner%>
-	<button type="button" class="user-btn yabutton right" id='follow'>
+	<button type="button" class="user-btn yabutton-large right" id='follow'>
     	<%#is_friend%>{% trans "Unfollow" %}<%/is_friend%>
         <%^is_friend%>{% trans "Follow" %}<%/is_friend%>
 	</button>
