added "mark all as read" button
* added method to NotificationsManager
* added view
* updated test
* added button on webpage

--- a/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
+++ b/yaapp/templates/yabase/app/notifications/notificationsPage.mustache
@@ -1,6 +1,7 @@
 {% load i18n %}
 <div class='row-fluid'>
 	<div class='span12'>
+        <button type="button" class="yabutton-small right" id='mark-all-read-btn'>{% trans "Mark all as read" %}</button>
 	    <h1>{% trans "Notifications" %}</h1>
 
         <ul id='notifications'>
