--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -196,7 +196,41 @@ body {
     right:20px;
 }
 
+#profile-box-container {
+    position:absolute;
+    top:40px;
+    left:-140px;
+    display:block;
+    width:282px;
+    background-color:rgba(44, 46, 47, 0.99);
+    border:1px solid black;
+    border-radius:5px;
+    box-shadow:0px 0px 2px grey inset;
+}
 
+#profile-box-container div {
+    margin:12px;
+}
+
+#profile-box-container button {
+    width:257px;
+    height:38px;
+    background-image:url('../app/images/login/login-btn-connection.png');
+    background-repeat:repeat-x;
+    color:#414244;
+    font-size:15px;
+    padding:0px;
+    margin-top:4px;
+    border:none;
+    box-shadow: 0px 1px 1px #202020;
+}
+
+#profile-box-container:before {
+    content:url('../app/images/login/login-tooltip.png');
+    position:absolute;
+    top:-13px;
+    left:50%;
+}
 
 
 
@@ -485,7 +519,7 @@ body {
 
 #profile-picture {
     float:left;
-    display:inline-block;
+    display:block;
     padding: 19px 0px 0px 16px;
 	text-decoration:none;
 }
