--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -275,17 +275,29 @@
 		                   {% if user_profile.picture %}
 		                       {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
 		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
-                                    <span class="yatoolelt">{% trans "Your profile" %}</span>
 									<img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"/>
+                       <div id='profile-box-container' class='hidden'>
+                        <div>
+                          <button id='my-profile-btn'>{% trans "My profile" %}</button>
+                          <button id='logout-btn'>{% trans "Logout" %}</button>
+                        </div>
+                       </div>
 								</a>
 		                       {% endthumbnail %}
 		                   {% else %}
-		                        <a href='#' class="yatooltip">
-                                    <span class="yatoolelt">{% trans "Your profile" %}</span>
+		                        <a href='{% url webapp_profile request.user.username %}' class='yatooltip'>
 									<img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture"/>
+                       <div id='profile-box-container' class='hidden'>
+                        <div>
+                          <button id='my-profile-btn'>{% trans "My profile" %}</button>
+                          <button id='logout-btn'>{% trans "Logout" %}</button>
+                        </div>
+                       </div>
 								</a>
 
 		                   {% endif %}
+
+
 		                </div>
 		                <div>
 		                    <a id="messages-btn" class="header-notification yatooltip" href="{% url webapp_notifications %}">
