added playlist template in webapp

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -196,6 +196,9 @@
    <script type="text/html" id="programmingPageTemplate">
       {% include "yabase/app/programming/programmingPage.mustache" %}
    </script>
+   <script type="text/html" id="playlistTemplate">
+      {% include "yabase/app/programming/playlist.mustache" %}
+   </script>
    <script type="text/html" id="songInstancesTemplate">
       {% include "yabase/app/programming/songInstances.mustache" %}
    </script>
