wip on programming page
* refactored urls
* programming data returns song instance instead of song metadata
* added delete song instance action

--- a/yaapp/templates/yabase/app/programming/programmingFilters.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingFilters.mustache
@@ -11,11 +11,14 @@
             <td>
               <select multiple="multiple" id="artist-select" data-placeholder="{% trans 'Select artists' %}">
               </select>
-             </td> 
+             </td>
             <td>
               <select multiple="multiple" id="album-select" data-placeholder="{% trans 'Select albums' %}">
               </select>
-             </td> 
+             </td>
         </tr>
     </tbody>
 </table>
+<div id='playlist-actions'>
+    <button class='yabutton-small'>{% trans "Remove all songs" %}</button>
+</div>
