--- a/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
@@ -1,3 +1,3 @@
 {% load i18n %}
-  <button class="btn active" id='all'>{% trans "All tracks" %}</button>
-  <button class="btn" id='import-itunes' >{% trans "Import from iTunes" %}</button>
+  <li class="active" id='all'><a href='#'>{% trans "All tracks" %}</a></li>
+  <li id='import-itunes' ><a href='#'>{% trans "Import from iTunes" %}</a></li>
