--- a/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
@@ -1,4 +1,7 @@
 {% load i18n %}
-<td><% name %></td>
-<td><% album_name %></td>
-<td><% artist_name %></td>
+<td><% metadata__name %></td>
+<td><% metadata__album_name %></td>
+<td><% metadata__artist_name %></td>
+<td>
+    <button class='yabutton-small remove'>{% trans 'remove' %}</button
+</td>
