--- a/yaapp/templates/yabase/app/programming/playlist.mustache
+++ b/yaapp/templates/yabase/app/programming/playlist.mustache
@@ -1,6 +1,6 @@
-{% load i18n}
-<div class="btn-group" data-toggle="buttons-radio" id='programming-toolbar'>
-</div>
+{% load i18n %}
+<ul class="nav nav-tabs" id='programming-toolbar'>
+</ul>
 <div id='programming-filters'></div>
 <div id='content'></div>
 <div class='cell-pagination' id='pagination'></div>
