--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -5,11 +5,13 @@
             <th>{% trans "Track" %}</th>
             <th>{% trans "Album" %}</th>
             <th>{% trans "Artist" %}</th>
+            <th>{% trans "Action" %}</th>
         </tr>
     </thead>
     <tbody id='song-instances'>
         <tr class='loading-mask'>
             <td><img  src='/media/images/loading.gif'/></td>
+            <td></td>
             <td></td>
             <td></td>
         </tr>
