refactored programming view

--- a/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
@@ -1,3 +1,4 @@
 {% load i18n %}
-  <li class="active" id='all'><a href='#'>{% trans "All tracks" %}</a></li>
+  <li class="active" id='all'><a href='#'>{% trans "Playlist content" %}</a></li>
+  <li id='add-from-server' ><a href='#'>{% trans "Add from server" %}</a></li>
   <li id='import-itunes' ><a href='#'>{% trans "Import from iTunes" %}</a></li>
