--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -1,4 +1,9 @@
 {% load i18n %}
+<div id='programming-filters'></div>
+<div id='playlist-actions'>
+    <button class='yabutton-small'>{% trans "Remove all songs" %}</button>
+</div>
+
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
@@ -17,3 +22,4 @@
         </tr>
     </tbody>
 </table>
+<div class='cell-pagination' id='pagination'></div>
