--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -214,6 +214,9 @@
    <script type="text/html" id="importFromItunesTemplate">
       {% include "yabase/app/programming/importFromItunes.mustache" %}
    </script>
+   <script type="text/html" id="programmingAddFromServerTemplate">
+      {% include "yabase/app/programming/addFromServer.mustache" %}
+   </script>
 
    <script type='text/html' id='myRadiosPageTemplate'>
      {% include "yabase/app/myRadios/myRadiosPage.mustache" %}
