--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2263,6 +2263,72 @@ ul .radio-with-stats-cells li {
     box-shadow:0px 2px 2px #e4e4e4;
 }
 
+/**
+ * Settings
+ */
+
+ .settings-container {
+    border-radius:7px;
+    box-shadow:0px 1px 4px #e2e2e2;
+    background-image: linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -o-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -moz-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -webkit-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+    background-image: -ms-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
+ }
+
+ .settings-container h1 {
+    font-size:42px;
+    padding:38px 0px 38px 31px;
+    border-bottom: 1px solid #e3e3e3;
+ }
+
+#settings-nav {
+    float:left;
+    border-right:1px solid #e3e3e3;
+    width:266px;
+    height:100%;   
+}
+
+#settings-nav li {
+    position:relative;
+    height:65px;
+    list-style: none;
+    border-bottom:1px solid #e3e3e3;
+}
+
+#settings-nav li span {
+    display:block;
+    color:#169dea;
+    font-size:17px;
+    padding-top:25px;
+    margin-left:95px;
+}
+
+#settings-nav li img {
+    position:absolute;
+    top:15px;
+    left:15px;
+}
+
+#settings-nav li:hover {
+    background-image:url('../app/images/settings/settings-nav-bg-hover.png');
+    cursor: pointer;
+}
+
+#settings-nav li a:hover {
+    text-decoration: none;
+}
+
+#settings-nav .checked {
+    background-image:url('../app/images/settings/settings-nav-bg-checked.png');
+    border:1px solid #0b7cbc;
+    text-shadow:1px 1px #126898;
+}
+
+#settings-nav .checked span {
+    color:white;
+}
 
 /**
  * common items
