--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -217,6 +217,9 @@
    <script type="text/html" id="programmingAddFromServerTemplate">
       {% include "yabase/app/programming/addFromServer.mustache" %}
    </script>
+   <script type="text/html" id="yasoundSongCellTemplate">
+      {% include "yabase/app/programming/yasoundSongCell.mustache" %}
+   </script>
 
    <script type='text/html' id='myRadiosPageTemplate'>
      {% include "yabase/app/myRadios/myRadiosPage.mustache" %}
