updated "add from server"

--- a/yaapp/templates/yabase/app/programming/yasoundSongCell.mustache
+++ b/yaapp/templates/yabase/app/programming/yasoundSongCell.mustache
@@ -3,5 +3,5 @@
 <td><% album %></td>
 <td><% artist %></td>
 <td>
-    <button class='yabutton-small remove'>{% trans 'remove' %}</button
+    <button class='yabutton-small add'>{% trans 'add' %}</button
 </td>
