--- a/yaapp/templates/yabase/app/programming/addFromServer.mustache
+++ b/yaapp/templates/yabase/app/programming/addFromServer.mustache
@@ -1,5 +1,13 @@
 {% load i18n %}
 {% load i18n %}
+
+<form class="well form-inline">
+    <input type='text' id='find-track-input' placeholder='{% trans "Track" %}'/>
+    <input type='text' id='find-album-input' class='input-small' placeholder='{% trans "Album" %}'/>
+    <input type='text' id='find-artist-input' placeholder='{% trans "Artist" %}'/>
+    <input type='submit' class='yabutton-small' id='find-btn' value='{% trans 'find' %}'/>
+</form>
+
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
@@ -7,12 +15,6 @@
             <th>{% trans "Album" %}</th>
             <th>{% trans "Artist" %}</th>
             <th>{% trans "Action" %}</th>
-        </tr>
-        <tr>
-            <th><input type='text' id='find-track-input'/></th>
-            <th><input type='text' id='find-album-input'/></th>
-            <th><input type='text' id='find-artist-input'/></th>
-            <th><button class='yabutton-small' id='find-btn'>{% trans 'find' %}</button></th>
         </tr>
     </thead>
     <tbody id='songs'>
