updated notification page

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -288,6 +288,7 @@
                        <div id='profile-box-container' class='hidden'>
                         <div>
                           <button id='my-profile-btn'>{% trans "My profile" %}</button>
+                          <button id='my-settings-btn'>{% trans "My settings" %}</button>
                           <button id='logout-btn'>{% trans "Logout" %}</button>
                         </div>
                        </div>
@@ -299,6 +300,7 @@
                        <div id='profile-box-container' class='hidden'>
                         <div>
                           <button id='my-profile-btn'>{% trans "My profile" %}</button>
+                          <button id='my-settings-btn'>{% trans "My settings" %}</button>
                           <button id='logout-btn'>{% trans "Logout" %}</button>
                         </div>
                        </div>
