--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -4,87 +4,125 @@
     <div class='span12 settings-container'>
         <h1>{% trans "Settings" %}</h1>
         <ul id='settings-nav' class='span4'>
-            <li class='checked'><a href="#"><img src="/media/app/images/settings/settings-icon-gear-wheel.png" alt='gear wheel' /><span>Mes informations</span></a></li>
-            <li class=''><a href="#"><img src="/media/app/images/settings/settings-icon-accounts.png" alt='accounts' /><span>Mes comptes</span></a></li>
-            <li class=''><a href="#"><img src="/media/app/images/settings/settings-icon-notifications.png" alt='notifications' /><span>Notifications</span></a></li>
+            <li class='checked' id='my-informations-menu'><a href="#"><img src="/media/app/images/settings/settings-icon-gear-wheel.png" alt='gear wheel' /><span>{% trans "My informations" %}</span></a></li>
+            <li class='' id='my-accounts-menu'><a href="#"><img src="/media/app/images/settings/settings-icon-accounts.png" alt='accounts' /><span>{% trans "My accounts" %}</span></a></li>
+            <li class='' id='my-notifications-menu'><a href="#"><img src="/media/app/images/settings/settings-icon-notifications.png" alt='notifications' /><span>{% trans "Notifications" %}</span></a></li>
         </ul>
         <div class='settings-content-container'>
             <div>
-                {% if settings_facebook_form %}
-                <form id='settings-facebook-form' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
-                    {{ settings_facebook_form }}
-                    <div class="form-actions">
-                        <input type='hidden' name='action' value='settings_facebook'/>
-                        <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
-                        <button type="submit" name='remove' id='btn-remove-facebook' class="btn btn-danger">{% trans "Remove account" %}</button>
-                    </div>
-                </form>
 
-               <div class="modal hide" id="modal-remove-facebook">
-                  <div class="modal-header">
-                    <button class="close" data-dismiss="modal">×</button>
-                    <h3>{% trans "Remove facebook account ?" %}</h3>
-                  </div>
-                  <div class="modal-body">
-                    <p>{% trans "Do you want to remove your facebook account ?" %}</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
-                    <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
-                  </div>
-                </div>        
-                 
-                {% endif %}
+                <div id='my-accounts' style='display:none;'>
+                    <form id='my-accounts' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
+                        {{ my_accounts_form }}
 
-                {% if settings_twitter_form %}
-                <form id='settings-twitter-form' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
-                    {{ settings_twitter_form }}
-                    <div class="">
-                        <input type='hidden' name='action' value='settings_twitter' />
-                        <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
-                        <button type="submit" name='remove' id='btn-remove-twitter' class="btn btn-danger">{% trans "Remove account" %}</button>
-                    </div>
-                </form>
+                        {% if display_associate_facebook %}
+                        <fieldset>
+                            <legend>{% trans "Facebook" %}</legend>
+                            <div class='control-group'>
+                                <div class='controls'>
+                                    <a class="btn-auth btn-facebook large first" href="{% url socialauth_associate_begin 'facebook' %}?next={{ next }}" rel="nofollow">
+                                    {% trans 'Associate my facebook account' %}
+                                    </a>
+                                </div>
+                            </div>
+                        </fieldset>
+                        {% else %}
+                        <fieldset>
+                            <legend>{% trans "Facebook" %}</legend>
+                            <div class='control-group'>
+                                <div class='controls'>
+                                    <button type="submit" name='remove_facebook' id='btn-remove-facebook' class="btn btn-danger">{% trans "Remove facebook account" %}</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </fieldset>
+                        {% endif %}
 
-               <div class="modal hide" id="modal-remove-twitter">
-                  <div class="modal-header">
-                    <button class="close" data-dismiss="modal">×</button>
-                    <h3>{% trans "Remove twitter account ?" %}</h3>
-                  </div>
-                  <div class="modal-body">
-                    <p>{% trans "Do you want to remove your twitter account ?" %}</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
-                    <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
-                  </div>
-                </div>        
-                {% endif %}
-                <form id='settings-user-form' enctype="multipart/form-data" class='information-container span8' method='post'>{% csrf_token %}
-                    {{ settings_user_form }}
-                {% if display_associate_facebook %}
-                <div class='control-group'>
-                    <div class='controls'>
-                        <a class="btn-auth btn-facebook large first" href="{% url socialauth_associate_begin 'facebook' %}?next={{ next }}" rel="nofollow">
-                        {% trans 'Associate my facebook account' %}
-                        </a>
+
+                        {% if display_associate_twitter %}
+                        <fieldset>
+                            <legend>{% trans "Twitter" %}</legend>
+                            <div class='control-group'>
+                                <div class='controls'>
+                                    <a class="btn-auth btn-twitter large" href="{% url socialauth_associate_begin 'twitter' %}?next={{ next }}" rel="nofollow">
+                                    {% trans 'Associate my twitter account' %}
+                                    </a>
+                                </div>
+                            </div>
+                        </fieldset>
+                        {% else %}
+                        <fieldset>
+                            <legend>{% trans "Twitter" %}</legend>
+                            <div class='control-group'>
+                                <div class='controls'>
+                                    <button type="submit" name='remove_twitter' id='btn-remove-twitter' class="btn btn-danger">{% trans "Remove twitter account" %}</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </fieldset>
+                        {% endif %}
+
+                        <div class="form-actions">
+                            <input type='hidden' name='action' value='my_accounts'/>
+                            <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
+                        </div>
+                    </form>
+
+
+                   <div class="modal hide fade" id="modal-remove-facebook">
+                      <div class="modal-header">
+                        <button class="close" data-dismiss="modal">×</button>
+                        <h3>{% trans "Remove facebook account ?" %}</h3>
+                      </div>
+                      <div class="modal-body">
+                        <p>{% trans "Do you want to remove your facebook account ?" %}</p>
+                      </div>
+                      <div class="modal-footer">
+                        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+                        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+                      </div>
                     </div>
+
+
+
+                   <div class="modal hide fade" id="modal-remove-twitter">
+                      <div class="modal-header">
+                        <button class="close" data-dismiss="modal">×</button>
+                        <h3>{% trans "Remove twitter account ?" %}</h3>
+                      </div>
+                      <div class="modal-body">
+                        <p>{% trans "Do you want to remove your twitter account ?" %}</p>
+                      </div>
+                      <div class="modal-footer">
+                        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+                        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+                      </div>
+                    </div>
+
                 </div>
-                {% endif %}
-                {% if display_associate_twitter %}
-                <div class='control-group'>
-                    <div class='controls'>
-                        <a class="btn-auth btn-twitter large" href="{% url socialauth_associate_begin 'twitter' %}?next={{ next }}" rel="nofollow">
-                        {% trans 'Associate my twitter account' %}
-                        </a>
-                    </div>
+
+                <div id='my-informations'>
+
+                    <form id='my-informations' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
+                        {{ my_informations_form }}
+
+                        <div class="form-actions">
+                            <input type='hidden' name='action' value='my_informations'/>
+                            <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                        </div>
+                    </form>
                 </div>
-                {% endif %}
-                    <div class="form-actions">
-                        <input type='hidden' name='action' value='settings_user'/>
-                        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-                    </div>
-                </form>
+
+                <div id='my-notifications' style='display:none;'>
+                    <form id='my-notifications-form' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
+                        {{ my_notifications_form }}
+                        <div class="form-actions">
+                            <input type='hidden' name='action' value='my_notifications'/>
+                            <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
     </div>
