--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2279,7 +2279,7 @@ ul .radio-with-stats-cells li {
 
  .settings-container {
     border-radius:7px;
-    box-shadow:0px 1px 4px #e2e2e2;
+    box-shadow:0px 1px 4px #cccccc;
     background-image: linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
     background-image: -o-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
     background-image: -moz-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
@@ -2328,6 +2328,12 @@ ul .radio-with-stats-cells li {
 }
 
 #settings-nav .checked {
+    background-image:url('../app/images/settings/settings-nav-bg-checked.png');
+    border:1px solid #0b7cbc;
+    text-shadow:1px 1px #126898;
+}
+
+#settings-nav .checked:hover {
     background-image:url('../app/images/settings/settings-nav-bg-checked.png');
     border:1px solid #0b7cbc;
     text-shadow:1px 1px #126898;
