--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -2,6 +2,10 @@
 <div class='radio-with-stats'>
     <div class='radio-cell-parent'>
     </div>
+    <div class='radio-toolbar'>
+        <button class='yabutton-small right edit-playlist'>{% trans "Edit playlist" %}</button>
+        <button class='yabutton-small right edit-radio'>{% trans "Edit radio" %}</button>
+    </div>
     <div class='stats'>
 		<div class='minutes-spent'>
 	    	<em><% overall_listening_time %></em>
