programming: delete all wip page

--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div id='programming-filters'></div>
 <div id='playlist-actions'>
-    <button class='yabutton-small'>{% trans "Remove all songs" %}</button>
+    <button class='yabutton-small' id='remove-all'>{% trans "Remove all songs" %}</button>
 </div>
 
 <table class="table table-bordered table-striped">
