--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -62,9 +62,9 @@
                         </fieldset>
                         {% endif %}
 
-                        <div class="form-actions">
+                        <div class="">
                             <input type='hidden' name='action' value='my_accounts'/>
-                            <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
+                            <button type="submit" name='save' class="save-btn right">{% trans "Save" %}</button>
                         </div>
                     </form>
 
