--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -64,7 +64,7 @@
 
                         <div class="">
                             <input type='hidden' name='action' value='my_accounts'/>
-                            <button type="submit" name='save' class="save-btn right">{% trans "Save" %}</button>
+                            <button type="submit" name='save' class="save-btn">{% trans "Save" %}</button>
                         </div>
                     </form>
 
@@ -108,7 +108,7 @@
 
                         <div>
                             <input type='hidden' name='action' value='my_informations'/>
-                            <button type="submit" class ="save-btn right">{% trans "Save" %}</button>
+                            <button type="submit" class ="save-btn">{% trans "Save" %}</button>
                         </div>
                     </form>
                 </div>
@@ -118,7 +118,7 @@
                         {{ my_notifications_form }}
                         <div>
                             <input type='hidden' name='action' value='my_notifications'/>
-                            <button type="submit" name='save-btn right' class="save-btn">{% trans "Save" %}</button>
+                            <button type="submit" name='save-btn' class="save-btn">{% trans "Save" %}</button>
                         </div>
                     </form>
                 </div>
