--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -6,7 +6,7 @@
         {% if request.user.is_superuser %}
         <button class='yabutton-small right edit-playlist'>{% trans "Edit playlist" %}</button>
         {% endif %}
-        <button class='yabutton-small right edit-radio'>{% trans "Edit radio" %}</button>
+        <button class='yabutton-small right edit-radio'>{% trans "Edit settings" %}</button>
     </div>
     <div class='stats'>
 		<div class='minutes-spent'>
