--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -23,3 +23,19 @@
     </tbody>
 </table>
 <div class='cell-pagination' id='pagination'></div>
+
+
+<div class="modal hide fade" id="modal-remove-all">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Remove all" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Do you really want to remove all filtered titles ?" %}
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+    </div>
+</div>
