--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2384,6 +2384,7 @@ ul .radio-with-stats-cells li {
 }
 
 .save-btn {
+    float:right;
     font-size: 17px;
     color:#58595c;
     padding:17px 63px;
@@ -2454,18 +2455,32 @@ ul .radio-with-stats-cells li {
     margin:0px;
 }
 
+.twitter_share_options {
+    margin-top:50px;
+}
+
+.twitter_share_options .control-group,
 .notifications .control-group {
     position:relative;
 }
 
-.notifications .controls {
+.twitter_share_options .checker,
+.notifications .checker {
+    display:block;
+    opacity:100%;
     height:22px;
     width:19px;
-    border:1px solid black;
+    background-image:url('../app/images/checkbox-empty.png');
     float:right;
     position:absolute;
     top:1px;
     right:150px;
+}
+
+.notifications .checker .checked-uniform {
+    background-image:url('../app/images/checkbox-checked.png');
+    height:22px;
+    width:19px;
 }
 
 /**
