--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2468,23 +2468,12 @@ ul .radio-with-stats-cells li {
     position:relative;
 }
 
-.twitter_share_options .checker,
-.notifications .checker {
-    display:block;
-    opacity:100%;
-    height:22px;
-    width:19px;
-    background-image:url('../app/images/checkbox-empty.png');
+.twitter_share_options .controls,
+.notifications .controls {
     float:right;
     position:absolute;
     top:1px;
     right:150px;
-}
-
-.notifications .checker .checked-uniform {
-    background-image:url('../app/images/checkbox-checked.png');
-    height:22px;
-    width:19px;
 }
 
 /**
