--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2388,7 +2388,6 @@ ul .radio-with-stats-cells li {
 }
 
 .save-btn {
-    float:right;
     font-size: 17px;
     color:#58595c;
     padding:17px 63px;
@@ -2464,16 +2463,18 @@ ul .radio-with-stats-cells li {
 }
 
 .twitter_share_options .control-group,
+.facebook_share_options .control-group,
 .notifications .control-group {
     position:relative;
 }
 
 .twitter_share_options .controls,
+.facebook_share_options .controls,
 .notifications .controls {
     float:right;
     position:absolute;
     top:1px;
-    right:150px;
+    right:120px;
 }
 
 /**
