fixed nav issue in profile page (current radio / history)

--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -31,7 +31,7 @@
 	</div>
    <div id='comments'>
         <%#history%>
-   		<h2><% human_date %> {% trans "on" %} <a id='radio-activity' href='/app/radio/<% radio_uuid %>/'><% radio_name %></a></h2>
+   		<h2><% human_date %> {% trans "on" %} <a id='radio-history' href='/app/radio/<% radio_uuid %>/'><% radio_name %></a></h2>
 		<blockquote>&laquo; <% message %> &raquo;</blockquote>
         <%/history%>
 		<div class='artist-comment'>
