--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1815,8 +1815,8 @@ ul#notifications .read {
 /**
  * Notifications
  */
-/*
-.notification-container h1 {
+
+.notifications-container h1 {
     padding-top:37px;
     padding-left:31px;
     height:67px;
@@ -1828,7 +1828,7 @@ ul#notifications .read {
     color:#434343;
 }
 
-.notification-container {
+.notifications-container {
     border-radius:7px;
     box-shadow:0px 1px 4px #e2e2e2;
     background-image: linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
@@ -1837,7 +1837,27 @@ ul#notifications .read {
     background-image: -webkit-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
     background-image: -ms-linear-gradient(bottom, rgb(241,241,241) 29%, rgb(255,255,255) 65%);
 }
-*/
+
+.notification-container {
+    height:67px;
+    border-top:1px solid #e3e3e3;
+    box-shadow: 0px 1px 1px white inset;
+}
+
+.notification-container .text-notification {
+    font-size:17px;
+    color:#434343;
+}
+
+.notification-odd {
+    background-color:#fdfdfd;
+}
+
+.notification-even {
+    background-color:#f4f4f4;
+}
+
+
 /**
  * User profile
  */
