--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -64,6 +64,17 @@
     <script language="javascript" type="text/javascript" src="/media/js/flot/jquery.flot.resize.js"></script>
     <script src="/media/js/jquery.uniform.js" type="text/javascript"></script>
 
+    <!-- Shim to make HTML5 elements usable in older Internet Explorer versions -->
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <!-- The Templates plugin is included to render the upload/download listings -->
+
+    <script src="/media/blueimp/js/jquery.iframe-transport.js"></script>
+    <script src="/media/blueimp/js/jquery.fileupload.js"></script>
+    <script src="/media/blueimp/js/locale.js"></script>
+    <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
+    <!--[if gte IE 8]><script src="/media/blueimp/js/cors/jquery.xdr-transport.js"></script><![endif]-->
+
+
 	<!--[if (gte IE 6)&(lte IE 8)]>
 	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
 	  <link rel="stylesheet" href="/media/css/ie.css" />
