--- a/yaapp/templates/yabase/app/radio/editRadioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/editRadioPage.mustache
@@ -10,6 +10,21 @@
             <div id='progress' class="progress progress-striped active">
               <div class="bar"></div>
             </div>
+
+            <div class="modal hide fade" id="modal-upload-error">
+                <div class="modal-header">
+                    <button class="close" data-dismiss="modal">×</button>
+                    <h3>{% trans "Upload error" %}</h3>
+                </div>
+                <div class="modal-body">
+                    <p>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+                </div>
+            </div>
+
             <form id='my-accounts' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
                 {{ settings_radio_form }}
                 <div>
