--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1804,14 +1804,6 @@ ul#notifications {
     margin-bottom: 12px;
 }
 
-ul#notifications li div {
-    font-weight: bold;
-}
-
-ul#notifications .read {
-    font-weight: normal;
-}
-
 /**
  * Notifications
  */
@@ -1839,14 +1831,29 @@ ul#notifications .read {
 }
 
 .notification-container {
+    position:relative;
     height:67px;
     border-top:1px solid #e3e3e3;
     box-shadow: 0px 1px 1px white inset;
+    padding-left: 102px;
+
 }
 
 .notification-container .text-notification {
     font-size:17px;
     color:#434343;
+    font-weight: normal;
+    padding-left:102px;
+}
+
+.notifications-heart {
+    height:47px;
+    width:47px;
+    background-repeat: no-repeat;
+    position:absolute;
+    left:20px;
+    top:15px;
+    background-image:url('../app/images/notifications/notifications-heart-icon.png');
 }
 
 .notification-odd {
