--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -1,5 +1,6 @@
 {% load i18n %}
 <div class='notification-container'>
+	<div class='notifications-heart'></div>
 	<a class="close" data-dismiss="alert" href="#">×</a>
 	<div class='date'><strong><% formatted_date %></strong></div> 
 	<div class='<%#read%>read<%/read%> text-notification'><% text %></div>
