--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2505,6 +2505,42 @@ ul .radio-with-stats-cells li {
 }
 
 /**
+ * radio edit
+ */
+
+.upload-container {
+    position:relative;
+    height:155px;
+    border:1px solid black;
+    background-image:url('../app/images/common/upload-bg.png');
+    border:1px solid #dadada;
+    border-radius:7px;
+}
+
+.upload-container img {
+    border-radius: 50px;
+}
+
+.upload-container input {
+    position:absolute;
+    top:60px;
+    left:160px;
+    height:35px;
+    border:1px solid black;
+}
+
+.upload-container .settings-picture {
+    position:absolute;
+    left:15px;
+    top:25px;
+    width:100px;
+    height:100;
+    border:4px solid white;
+    border-radius:50%;
+    box-shadow: 0px 0px 5px #7b7b7b, inset 1px 1px -5px #7b7b7b;
+}
+
+/**
  * common items
  */
 
