--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -224,6 +224,12 @@
    <script type="text/html" id="importFromItunesTemplate">
       {% include "yabase/app/programming/importFromItunes.mustache" %}
    </script>
+   <script type="text/html" id="programmingUploadTemplate">
+      {% include "yabase/app/programming/upload.mustache" %}
+   </script>
+   <script type="text/html" id="programmingUploadCellTemplate">
+      {% include "yabase/app/programming/uploadCell.mustache" %}
+   </script>
    <script type="text/html" id="programmingAddFromServerTemplate">
       {% include "yabase/app/programming/addFromServer.mustache" %}
    </script>
