--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2515,29 +2515,45 @@ ul .radio-with-stats-cells li {
     background-image:url('../app/images/common/upload-bg.png');
     border:1px solid #dadada;
     border-radius:7px;
+    margin-bottom:25px;
 }
 
 .upload-container img {
     border-radius: 50px;
 }
 
-.upload-container input {
+.upload-container .upload-content {
+    font-size: 17px;
+    color:#58595c;
+    margin:60px 100px 0px 168px;
+    position:relative;
+    overflow:hidden;
+}
+
+.upload-container .upload-content span {
+    vertical-align: -5px;
+}
+
+.upload-container .upload-content input {
     position:absolute;
-    top:60px;
-    left:160px;
-    height:35px;
-    border:1px solid black;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: solid transparent;
+    opacity: 0;
+    cursor: pointer;
 }
 
 .upload-container .settings-picture {
     position:absolute;
-    left:15px;
-    top:25px;
+    left:30px;
+    top:24px;
     width:100px;
     height:100;
     border:4px solid white;
     border-radius:50%;
     box-shadow: 0px 0px 5px #7b7b7b, inset 1px 1px -5px #7b7b7b;
+    margin-right:40px;
 }
 
 /**
