--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2468,7 +2468,7 @@ ul .radio-with-stats-cells li {
 }
 
 #div_id_gender .controls:after {
-    content:url(../app/images/settings/settings-selector.png);
+    content:url('../app/images/settings/settings-selector.png');
     position:absolute;
     top:11px;
     right:11px;
@@ -2555,6 +2555,33 @@ ul .radio-with-stats-cells li {
     box-shadow: 0px 0px 5px #7b7b7b, inset 1px 1px -5px #7b7b7b;
     margin-right:40px;
 }
+
+#div_id_genre .controls {
+    width:144px;
+    height:30px;
+    position:relative;
+    border:1px solid #bebebe;
+    border-radius:7px;
+    box-shadow: 0px 2px 4px #d4d4d4;
+    background-image:url('../app/images/settings/settings-form-bg.png');
+    background-repeat:repeat-x;
+    padding:3px 5px;
+}
+
+#div_id_genre .controls:after {
+    content:url('../app/images/settings/settings-selector.png');
+    position:absolute;
+    top:11px;
+    right:11px;
+}
+
+#div_id_gendre span {
+    color:#74737b;
+    font-size:17px;
+    padding:0px;
+    margin:0px;
+}
+
 
 /**
  * common items
