--- a/yaapp/templates/yabase/app/programming/uploadCell.mustache
+++ b/yaapp/templates/yabase/app/programming/uploadCell.mustache
@@ -1,8 +1,8 @@
 {% load i18n %}
 <td><% name %></td>
 <td>
-    <div class='progress-bar' class="progress progress-striped active">
-      <div class="bar"></div>
+    <div id='progress' class="progress progress-striped active">
+      <div class="bar" style="width: 0%"></div>
     </div>
 </td>
 <td>
